--- a/welcome.html
+++ b/welcome.html
@@ -20,7 +20,7 @@
         }
         
         .background-image {
-            background-image: url('welcome-background.jpg');
+            background-image: url('welcome.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
