--- a/main.html
+++ b/main.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tomato Leaf Disease Prediction - Main Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+        
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+            text-align: center;
+            color: white;
+        }
+        
+        .background-image {
+            background-image: url('main.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            height: 100vh;
+        }
+    </style>
 </head>
-<body>
+<body class="background-image">
     <div class="container">
         <h1>Tomato Leaf Disease Prediction</h1>
         <p>Welcome to the Tomato Leaf Disease Prediction tool. Upload an image of a tomato leaf to predict potential diseases.</p>
@@ -16,7 +38,6 @@
         </form>
         <div id="prediction-message"></div>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         // Function to handle form submission
@@ -30,7 +51,7 @@
             var reader = new FileReader();
             reader.onload = function(event) {
                 localStorage.setItem('uploadedImage', event.target.result);
-                window.location.href = 'result.html'; // Redirect to result page
+                window.location.href = 'result-page.html'; // Redirect to result page
             };
             reader.readAsDataURL(fileInput);
         });
