--- a/result.html
+++ b/result.html
@@ -20,7 +20,7 @@
         }
         
         .background-image {
-            background-image: url('result-background.jpg');
+            background-image: url('result.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
