--- a/result.html
+++ b/result.html
@@ -9,6 +9,12 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
+            background-image: url('result-background.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            height: 100vh;
+            color: white;
         }
         
         .container {
@@ -16,29 +22,20 @@
             margin: 50px auto;
             padding: 20px;
             text-align: center;
-            color: white;
-        }
-        
-        .background-image {
-            background-image: url('result.jpg');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            height: 100vh;
         }
     </style>
 </head>
-<body class="background-image">
+<body>
     <div class="container">
         <h1>Prediction Results</h1>
         <div id="results">
             <!-- Prediction result will be dynamically inserted here -->
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         // Check if image is uploaded
-        if(localStorage.getItem('imageUploaded')) {
+        var uploadedImage = localStorage.getItem('uploadedImage');
+        if (uploadedImage) {
             // If image is uploaded, display results
             displayResult();
         } else {
