--- a/main.html
+++ b/main.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tomato Leaf Disease Prediction - Result Page</title>
+    <title>Tomato Leaf Disease Prediction - Main Page</title>
     <style>
         body {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('result-background.jpg');
+            background-image: url('main-background.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -27,44 +27,31 @@
 </head>
 <body>
     <div class="container">
-        <h1>Prediction Results</h1>
-        <div id="results">
-            <!-- Prediction result will be dynamically inserted here -->
-        </div>
+        <h1>Tomato Leaf Disease Prediction</h1>
+        <p>Welcome to the Tomato Leaf Disease Prediction tool. Upload an image of a tomato leaf to predict potential diseases.</p>
+        <form id="upload-form" enctype="multipart/form-data">
+            <input type="file" id="image-upload" accept="image/*" required>
+            <button type="submit">Predict</button>
+        </form>
+        <div id="prediction-message"></div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        // Check if image is uploaded
-        var uploadedImage = localStorage.getItem('uploadedImage');
-        if (uploadedImage) {
-            // If image is uploaded, display results
-            displayResult();
-        } else {
-            // If no image uploaded, display message
-            document.getElementById('results').innerHTML = '<p>No image uploaded. Please upload an image to see the results.</p>';
-        }
-
-        function displayResult() {
-            var resultsDiv = document.getElementById('results');
-            resultsDiv.innerHTML = ''; // Clear previous result
-
-            var ul = document.createElement('ul');
-
-            // Generate a single random prediction for tomato leaf diseases
-            var prediction = generateRandomPrediction();
-            var li = document.createElement('li');
-            li.textContent = prediction.disease + ' - Accuracy: ' + prediction.accuracy;
-            ul.appendChild(li);
-
-            resultsDiv.appendChild(ul);
-        }
-
-        // Function to generate a single random prediction for tomato leaf diseases
-        function generateRandomPrediction() {
-            var diseases = ["Early Blight", "Late Blight", "Leaf Mold", "Bacterial Spot"];
-            var randomDisease = diseases[Math.floor(Math.random() * diseases.length)];
-            var accuracy = Math.floor(Math.random() * 26) + 70; // Random accuracy between 70 and 95
-            return { disease: randomDisease, accuracy: accuracy + "%" };
-        }
+        // Function to handle form submission
+        $('#upload-form').submit(function(e) {
+            e.preventDefault();
+            var formData = new FormData();
+            var fileInput = $('#image-upload')[0].files[0];
+            formData.append('file', fileInput);
+            
+            // Store image in localStorage
+            var reader = new FileReader();
+            reader.onload = function(event) {
+                localStorage.setItem('uploadedImage', event.target.result);
+                window.location.href = 'result-page.html'; // Redirect to result page
+            };
+            reader.readAsDataURL(fileInput);
+        });
     </script>
 </body>
 </html>
