--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('main-background.jpg');
+            background-image: url('main.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
