--- a/welcome.html
+++ b/welcome.html
@@ -41,7 +41,7 @@
             <li>Bacterial Spot</li>
         </ul>
         <p>Click the button below to get started:</p>
-        <a href="main-page.html" class="button">Start Prediction</a>
+        <a href="main.html" class="button">Start Prediction</a>
     </div>
 </body>
 </html>
